@@ -1,3 +1,12 @@
+2011-05-02  Jeff Miller  <jeffm@apple.com>
+
+        Reviewed by Alexy Proskuryakov.
+
+        Avoid potential buffer overflow in WTFLog() and WTFLogVerbose()
+        https://bugs.webkit.org/show_bug.cgi?id=59949
+
+        * wtf/Assertions.cpp: Check for 0 or empty format string in WTFLog() and WTFLogVerbose().
+
 2011-05-02  Adam Barth  <abarth@webkit.org>
 
         Reviewed by Alexey Proskuryakov.
